fix image contrast

--- a/index.css
+++ b/index.css
@@ -127,8 +127,8 @@ a:hover {
 }
 h1 {
     font-weight: 600;
-    font-size: 50px;
-    color: #ffffff;
+    font-size: 42px;
+    color: hsl(255, 100, 100);
 }
 @media only screen and (max-width: 750px) {
     h1 {
